Fixed bug on the home page
Bug in style.scss under the directory of "Header2"where a background image was styled. This made it so that the contents of the landing were distorted.

--- a/frontend/src/Components/header2/styles/styles.scss
+++ b/frontend/src/Components/header2/styles/styles.scss
@@ -34,7 +34,7 @@ a {
   font-family: inherit;
 }
 
-.hero {
+/* .hero {
   width: 100vw;
   height: 100vh;
 
@@ -43,4 +43,4 @@ a {
     height: 100%;
     object-fit: cover;
   }
-}
+} */
