--- a/frontend/src/Components/landingPage/Hero/Hero.css
+++ b/frontend/src/Components/landingPage/Hero/Hero.css
@@ -1,6 +1,6 @@
 .hero {
     margin: 0px 120px;
-    margin-top: -270px;
+    margin-top: 200px;
 }
 
 .hero-text {
@@ -30,8 +30,7 @@
 }
 
 .hero-dot-play {
-    margin-top: 0px;
-    margin-right: 150px;
+    margin-top: 120px;
     display: flex;
     justify-content: space-between;
 }
